<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="BlankFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"

        tools:src="@tools:sample/avatars" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="start"
                android:text="@string/familyname" />

            <EditText
                android:id="@+id/familyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="start"
                android:text="@string/address" />

            <EditText
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="textPostalAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="start"
                android:text="@string/tel" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="phone"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="start"
                android:text="@string/birth" />

            <DatePicker
                android:id="@+id/datepick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <!--
            <EditText
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="date"
                android:singleLine="true" />
            -->

            <TextView
                android:id="@+id/editdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="start"
                android:text="@string/edittime" />

            <TextView
                android:id="@+id/textViewEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="start" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:gravity="start"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:gravity="start"
                android:hint="@string/insert"
                android:inputType="numberPassword"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:weightSum="1">

        <Button
            android:id="@+id/cancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:layout_weight="0.5"

            android:fontFamily="@font/alef"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/enter"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:backgroundTint="@color/black"

            android:fontFamily="@font/alef"
            android:text="@string/enter" />
    </TableRow>

</LinearLayout>