<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailslinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="BlankFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailstopLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingTop="2dp">


        <ImageView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:clickable="false"
            android:contextClickable="false"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:src="@mipmap/ic_contact_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/surname"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:typeface="normal" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:gravity="start"

                android:text="@string/familyname"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/familyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:gravity="start"
                android:text="@string/address"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPostalAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:gravity="start"
                android:text="@string/tel"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:imeOptions="flagNoExtractUi"
                android:inputType="phone"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:gravity="start"
                android:text="@string/birth"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:layout_marginStart="10dp"
                android:gravity="start"


                android:singleLine="true" />


            <TextView
                android:id="@+id/editdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:gravity="start"
                android:text="@string/edittime"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textViewEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                 />

        </LinearLayout>
    </ScrollView>




</LinearLayout>